--- a/app/src/main/res/layout/list_item_salon.xml
+++ b/app/src/main/res/layout/list_item_salon.xml
@@ -1,26 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_height="?listPreferredItemHeight"
+              android:layout_height="wrap_content"
               android:layout_margin="4dp">
 
     <ImageView
         android:id="@+id/iv_logo"
         android:layout_width="@dimen/list_item_icon_size"
-        android:layout_height="@dimen/list_item_icon_size"/>
+        android:layout_height="@dimen/list_item_icon_size"
+        android:layout_centerVertical="true"
+        tools:src="@mipmap/ic_launcher"/>
 
     <TextView
         android:id="@+id/tv_name"
+        android:layout_toRightOf="@id/iv_logo"
+        android:layout_toEndOf="@id/iv_logo"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_height="wrap_content"
         android:layout_width="@dimen/list_item_salon_name_width"
         android:gravity="center"
         android:padding="4dp"
-        android:layout_height="match_parent" />
+        android:textAppearance="?android:textAppearanceLarge"
+        tools:text="title"
+        />
 
     <TextView
-        android:id="@+id/tv_website"
+        android:id="@+id/tv_desc"
+        android:layout_below="@id/tv_name"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"/>
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@id/tv_name"
+        android:layout_alignLeft="@id/tv_name"
+        android:layout_alignRight="@id/tv_name"
+        android:layout_alignEnd="@id/tv_name"
+        tools:text="long long long long text"
+        android:maxLength="200"
+        android:padding="8dp"/>
 
-</LinearLayout>
+</RelativeLayout>
