--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -21,9 +21,15 @@
         android:gravity="center"
         android:padding="4dp"
         android:maxLines="1"
-        android:background="#44000000"
+        android:background="#8000"
         android:textColor="#ffffff"
-        android:textAppearance="?android:textAppearanceLarge"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"
         tools:text="title" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="?android:attr/selectableItemBackground"
+        />
 
 </RelativeLayout>
